putting tags under /api/v1
